// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateNewKeyPair should match snapshots for various states of success and error 1`] = `
<Connect(Form(CreateNewKeyPair))
  destroyOnUnmount={true}
  enableReinitialize={false}
  error={true}
  forceUnregisterOnUnmount={false}
  form="CreateNewKeyPair"
  getFormState={[Function]}
  keepDirtyOnReinitialize={false}
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldValidate={[Function]}
  success={true}
  touchOnBlur={true}
  touchOnChange={false}
/>
`;

exports[`CreateNewKeyPair should match snapshots for various states of success and error 2`] = `
<Connect(Form(CreateNewKeyPair))
  destroyOnUnmount={true}
  enableReinitialize={false}
  error={false}
  forceUnregisterOnUnmount={false}
  form="CreateNewKeyPair"
  getFormState={[Function]}
  keepDirtyOnReinitialize={false}
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldValidate={[Function]}
  success={true}
  touchOnBlur={true}
  touchOnChange={false}
/>
`;

exports[`CreateNewKeyPair should match snapshots for various states of success and error 3`] = `
<Connect(Form(CreateNewKeyPair))
  destroyOnUnmount={true}
  enableReinitialize={false}
  error={true}
  forceUnregisterOnUnmount={false}
  form="CreateNewKeyPair"
  getFormState={[Function]}
  keepDirtyOnReinitialize={false}
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldValidate={[Function]}
  success={false}
  touchOnBlur={true}
  touchOnChange={false}
/>
`;

exports[`CreateNewKeyPair should match snapshots for various states of success and error 4`] = `
<Connect(Form(CreateNewKeyPair))
  destroyOnUnmount={true}
  enableReinitialize={false}
  error={false}
  forceUnregisterOnUnmount={false}
  form="CreateNewKeyPair"
  getFormState={[Function]}
  keepDirtyOnReinitialize={false}
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldValidate={[Function]}
  success={false}
  touchOnBlur={true}
  touchOnChange={false}
/>
`;
